--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -12,12 +12,24 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
+
+        {% if current_user.is_authenticated %} 
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('secure_page') }}">Secure Page</a>
+          </li>
+        {% endif %}
     </ul>
 
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-      </li>
+        {% if current_user.is_authenticated %} 
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+        {% endif %}
     </ul>
   </div>
 </nav>
